welcome.lessons.welcome.loopdowhile.Poucet1.scala.error
Poucet:4: error: '(' expected but identifier found.
  while (estFaceMur()==false) {avance; if estSurBaggle() {FoundBaggles=FoundBaggles+1} }
                                          ^Poucet:4: error: illegal start of simple expression
  while (estFaceMur()==false) {avance; if estSurBaggle() {FoundBaggles=FoundBaggles+1} }
                                                                                       ^