welcome.lessons.welcome.loopdowhile.Poucet1.scala.code
var FoundBaggles:Int=0
while (sortieTrouvee()==false) 
{
  while (estFaceMur()==false) {avance; if estSurBaggle() {FoundBaggles=FoundBaggles+1} }
  if (FoundBaggles<3) {gauche;FoundBaggles=0}
	else {droite();FoundBaggles=0}	
}